[package]
name = "sesamo-backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.12.1"
env_logger = "0.11.8"
firestore = { version = "0.47.0", features = ["caching-memory"] }
futures = "0.3.31"
itertools = "0.14.0"
openssl = { version = "0.10.75", features = ["vendored"] }
reqwest = "0.12.28"
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
tokio-shared-rt = "0.1.0"
