[package]
name = "sesamo-backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.13.0"
env_logger = "0.11.10"
firestore = { version = "0.48.0", features = ["caching-memory"] }
futures = "0.3.32"
itertools = "0.14.0"
openssl = { version = "0.10.75", features = ["vendored"] }
reqwest = { version = "0.13.2", features = ["form"] }
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["sync"] }

[dev-dependencies]
tokio-shared-rt = "0.1.0"
