[package]
name = "sesamo-backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.13.0"
env_logger = "0.11.10"
firestore = { version = "0.48.0", features = ["caching-memory"] }
futures = "0.3.32"
itertools = "0.14.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
openssl = { version = "0.10.79", features = ["vendored"] }
reqwest = { version = "0.13.3", features = ["form"] }
rustls = { version = "0.23.39", features = ["aws-lc-rs"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["sync"] }

[dev-dependencies]
tokio-shared-rt = "0.1.0"
